--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,17 @@
 {{ define "main" }}
-<h1>歡迎</h1>
+<h1>歡迎來到 Blob</h1>
+<h2>導覽列</h2>
+{{ partial "navbar.html" . }}
+<h2>文章列表</h2>
 <ul>
 {{ range .Site.RegularPages }}
-<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+<li><a href="{{ .RelPermalink }}">{{ .Title }}</a> - {{ .Section }}</li>
+{{ end }}
+</ul>
+<h2>文章類別</h2>
+<ul>
+{{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+<li><a href="{{ $taxonomy.Page.RelPermalink }}">{{ $name }}</a></li>
 {{ end }}
 </ul>
 {{ end }}
