--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,21 +1,13 @@
 {{ define "main" }}
-  <section class="blog" id="blog">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12"><h1>{{ humanize .Type }}</h1></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 posts-list">
-          {{ range .Data.Pages }}
-            <article>
-              <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-              <div class=sub-header>
-                {{ .Date.Format (.Site.Params.dateform | default "January 2, 2006") }} · {{ i18n "minuteRead" .ReadingTime }}
-              </div>
-            </article>
-          {{ end }}
-        </div>
-      </div>
-    </div>
-  </section>
+<main class="main-content">
+    <h1>{{ .Title }}</h1>
+    <ul class="post-list">
+        {{ range .Pages }}
+        <li>
+            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+            <time>{{ .Date.Format "2006-01-02" }}</time>
+        </li>
+        {{ end }}
+    </ul>
+</main>
 {{ end }}
