--- a/layouts/partials/giscus.html
+++ b/layouts/partials/giscus.html
@@ -5,13 +5,14 @@
             data-repo-id="{{ .Site.Params.giscus.repoId }}"
             data-category="{{ .Site.Params.giscus.category }}"
             data-category-id="{{ .Site.Params.giscus.categoryId }}"
-            data-mapping="pathname"
-            data-strict="0"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-input-position="bottom"
-            data-theme="preferred_color_scheme"
-            data-lang="zh-TW"
+            data-mapping="{{ or .Site.Params.giscus.mapping "pathname" }}"
+            data-strict="{{ or .Site.Params.giscus.strict "0" }}"
+            data-reactions-enabled="{{ or .Site.Params.giscus.reactionsEnabled "1" }}"
+            data-emit-metadata="{{ or .Site.Params.giscus.emitMetadata "0" }}"
+            data-input-position="{{ or .Site.Params.giscus.inputPosition "bottom" }}"
+            data-theme="{{ or .Site.Params.giscus.theme "preferred_color_scheme" }}"
+            data-lang="{{ or .Site.Params.giscus.lang "zh-TW" }}"
+            data-loading="{{ or .Site.Params.giscus.loading "lazy" }}"
             crossorigin="anonymous"
             async>
     </script>
