--- a/layouts/partials/giscus.html
+++ b/layouts/partials/giscus.html
@@ -1,20 +1,20 @@
 {{ if .Site.Params.giscus.enable }}
 <div class="giscus-comment">
     <script src="https://giscus.app/client.js"
-            data-repo="{{ .Site.Params.giscus.repo }}"
-            data-repo-id="{{ .Site.Params.giscus.repoId }}"
-            data-category="{{ .Site.Params.giscus.category }}"
-            data-category-id="{{ .Site.Params.giscus.categoryId }}"
-            data-mapping="{{ or .Site.Params.giscus.mapping "pathname" }}"
-            data-strict="{{ or .Site.Params.giscus.strict "0" }}"
-            data-reactions-enabled="{{ or .Site.Params.giscus.reactionsEnabled "1" }}"
-            data-emit-metadata="{{ or .Site.Params.giscus.emitMetadata "0" }}"
-            data-input-position="{{ or .Site.Params.giscus.inputPosition "bottom" }}"
-            data-theme="{{ or .Site.Params.giscus.theme "preferred_color_scheme" }}"
-            data-lang="{{ or .Site.Params.giscus.lang "zh-TW" }}"
-            data-loading="{{ or .Site.Params.giscus.loading "lazy" }}"
-            crossorigin="anonymous"
-            async>
-    </script>
+        data-repo="eric861129/MyBlob"
+        data-repo-id="R_kgDOO2a_UQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO2a_Uc4CrGzL"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="dark"
+        data-lang="zh-TW"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 </div>
 {{ end }}
