--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -6,9 +6,9 @@
         {{ .Date.Format (.Site.Params.dateform | default "January 2, 2006") }} · {{ i18n "minuteRead" .ReadingTime }}
       </div>
       <article class="entry-content">
-        {{ if .TableOfContents }}
+        {{ if and (gt .WordCount 400) (.TableOfContents) }}
         <aside class="toc">
-          <h2>本文目錄</h2>
+          <h2 class="toc-title">本文目錄</h2>
           {{ .TableOfContents }}
         </aside>
         {{ end }}
