--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,12 @@
+<!-- 文章列表頁範本 -->
 {{ define "main" }}
 <main>
     <section class="mb-12 sm:mb-16">
         <h1 class="text-3xl sm:text-5xl font-bold tracking-tight mb-4">
-            {{ if eq .Kind "section" }}
+            {{ if .IsSection }}
                 {{ .Title }}
-            {{ else if eq .Kind "taxonomy" }}
-                {{ .Data.Singular }}: {{ .Title }}
+            {{ else if .IsTaxonomyType }}
+                {{ .Data.Singular | i18n }}: {{ .Title }}
             {{ else }}
                 {{ .Title }}
             {{ end }}
