--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <main>
     <!-- 首頁歡迎區塊 -->
     <section class="text-center mb-12 sm:mb-20">
-        <h1 class="text-3xl sm:text-5xl font-bold tracking-tight mb-4">{{ .Site.Params.description | default "歡迎來到我的部落格" }}</h1>
+        <h1 class="py-8  text-3xl sm:text-5xl font-bold tracking-tight mb-4">{{ .Site.Params.description | default "歡迎來到我的部落格" }}</h1>
         <div class="max-w-2xl mx-auto sm:text-lg" style="color: var(--text-secondary);">
             {{ .Content }}
         </div>
