--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -184,7 +184,7 @@
               script.setAttribute("data-lang", "zh-TW");
               script.setAttribute("crossorigin", "anonymous");
               script.async = true;
-              giscusContainer.appendChild(script);Add commentMore actions
+              giscusContainer.appendChild(script);
           }
         });
     </script>
