--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -91,11 +91,11 @@
 
     </div>
 
-<script src="{{ "/pagefind/pagefind-ui.js" | relURL }}"
+<script src="/MyBlob/pagefind/pagefind-ui.js"
         onload="new PagefindUI({
             element: '#search',
             showSubResults: true,
-            baseUrl: '{{ .Site.BaseURL | relURL }}'
+            baseUrl: '/MyBlob/'
         });"></script>
     <script>
          document.addEventListener('DOMContentLoaded', () => {
